[package]
name = "cderive"
version = "0.1.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]

[dependencies]
clang = { version = "0.17", features = ["runtime", "clang_3_9"] }
clang-sys = { version = "0.20.0", features = ["runtime", "clang_3_9"] }
# NOTE: Don't up the version of quote used, as 0.3 is the last string-based
# version of quote. This crate will likely eventually begin using an alternate
# implementation of quote!().
quote = "0.3"

